tests/e2e/negative/n0015_undefined_type_in_method_param.cryo
// @test: undefined_type_in_method_param
// @expect: compile_fail
// @mode: raw
// @description: Using an undefined type as a method parameter should produce an undefined type error, not a cryptic downstream error like "Static method not found"
// @tags: types, errors, structs, methods

namespace NegUndefTypeMethodParam;

type struct Handler {
    static process(item: NonExistentType) -> int {
        return 0;
    }
}

function main() -> int {
    const val: int = Handler::process(42);
    return 0;
}
